--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,18 @@ project/data/
 project/lightning_logs/
 project/wandb/
 project/logs/
+
+# VS Code
+.vscode/
+
+# Spyder
+.spyproject/
+
+# Jupyter NB Checkpoints
+.ipynb_checkpoints/
+
+# exclude data from source control by default
+/data/
+
+# Mac OS-specific storage files
+.DS_Store
